--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -118,7 +118,7 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-md-12">
-											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Premier <br>Precision Manufacturer</h1>
+											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Premier<br>Manufacturer</h1>
 											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">for the medical device market</h3>
 											<br>
 											<a href="#about" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
@@ -245,7 +245,7 @@
 		<div id="testimonials" class="text-center">
 			<div class="container">
 				<div class="section-title center">
-					<h2>We help bring your medical products to market</h2>
+					<h2>We help bring your precision medical products to market</h2>
 					<hr>
 					<h3>3D TEK CNC Core Values</h3>
 					<br>
@@ -312,6 +312,12 @@
 					<div class="col-sm-8">
 						<div class="text-center gallery-slider-for">
 							<div class="text-center wow animated fadeIn">
+								<img src="img/peek-precision-fixtures.JPG">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/precision-pendant.JPG">
+							</div>
+							<div class="text-center wow animated fadeIn">
 								<img src="img/3D-TEK-Mold-Cavity.png">
 							</div>
 							<div class="text-center wow animated fadeIn">
@@ -329,15 +335,21 @@
 							<div class="text-center wow animated fadeIn">
 								<img src="img/machined-parts-2.jpg">
 							</div>
-							<!--<div class="text-center wow animated fadeIn">
-								<img src="img/multi-axis-machining-1.jpg">
+							<div class="text-center wow animated fadeIn">
+								<img src="img/precision-tooling.JPG">
 							</div>
 							<div class="text-center wow animated fadeIn">
-								<img src="img/multi-axis-machining-2.jpg">
-							</div>-->
+								<img src="img/medical-molding.JPG">
+							</div>
 						</div>
 						<br>
 						<div class="row text-center gallery-slider-nav hidden-xs">
+							<div class="text-center wow animated fadeIn">
+								<img src="img/peek-precision-fixtures.JPG" height="50">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/precision-pendant.JPG" height="50">
+							</div>
 							<div class="text-center wow animated fadeIn">
 								<img src="img/3D-TEK-Mold-Cavity.png" height="50">
 							</div>
@@ -356,12 +368,12 @@
 							<div class="text-center wow animated fadeIn">
 								<img src="img/machined-parts-2.jpg" height="50">
 							</div>
-							<!--<div class="text-center wow animated fadeIn">
-								<img src="img/multi-axis-machining-1.jpg" height="50">
+							<div class="text-center wow animated fadeIn">
+								<img src="img/precision-tooling.JPG" height="50">
 							</div>
 							<div class="text-center wow animated fadeIn">
-								<img src="img/multi-axis-machining-2.jpg" height="50">
-							</div>-->
+								<img src="img/medical-molding.JPG" height="50">
+							</div>
 
 						</div>
 					</div>
