--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -118,8 +118,8 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-md-12">
-											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Premier<br>Manufacturer</h1>
-											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">for the medical device market</h3>
+											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Premier<br>Precision Manufacturer</h1>
+											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">for the <strong>medical device market</strong></h3>
 											<br>
 											<a href="#about" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
 										</div>
