--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -52,7 +52,7 @@
 							<!-- Hidden li included to remove active class from about link when scrolled up past about section -->
 							<li class="hidden"> <a href="#page-top"></a> </li>
 							<li> <a href="#"><i class="fa fa-phone" aria-hidden="true"></i> (805) 588-6559</a></li>
-							<li> <a href="#" class="nav-button">Request A Quote</a></li>
+							<li> <a href="https://demo-orders.sendcnc.com/3d-tek-cnc/upload" class="nav-button">Request A Quote</a></li>
 						</ul>
 					</div>
 				</div>
