--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -433,7 +433,7 @@
 						<p>Request a quote</p>
 					</div>
 					<div class="col-md-4 text-right">
-						<a href="#" class="btn btn-default">REQUEST A QUOTE</a>
+						<a href="https://demo-orders.sendcnc.com/3d-tek-cnc/upload" class="btn btn-default">REQUEST A QUOTE</a>
 					</div>
 				</div>
 			</div>
