--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -100,7 +100,7 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-md-12">
-											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Precision <br>Machined Components</h1>
+											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Premier<br>Precision Machining</h1>
 											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">premier supplier for the medical device market</h3>
 											<br>
 											<a href="#about" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
@@ -168,9 +168,9 @@
 				</div>
 				<div class="row">
 					<div class="col-md-6">
-						<h3><a href="#">Premier Precision Machining</a></h3>
+						<h3>Premier Precision Machining</h3>
 						<p>
-							3D TEK CNC, INC. is a <strong>precision machine shop</strong> serving a core spectrum of precision industries which
+							3D TEK CNC, INC. provides <strong>premier precision machining</strong> serving a core spectrum of precision industries which
 							include Medical, Aerospace, MEMS Technology and Particle Accelerator Industries. Specializing in
 							precision medical components and micro mold builds for implantable silicone components.
 						</p>
@@ -186,8 +186,21 @@
 						</p>
 					</div>
 					<div class="col-md-6">
+						<div class="about-slider">
 						<!--<img src="http://via.placeholder.com/500x350">-->
-						<img width="500" src="img/machine-shop.jpg" alt="Precision Machine Shop Ventura CA">
+							<div class="text-center wow animated fadeIn">
+								<img width="500" src="img/team-1.jpg" alt="Expert Precision Machinists in Ventura CA">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img width="500" src="img/team-2.jpg" alt="Timely Precision Machine Shop near Ventura CA">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img width="500" src="img/team-3.jpg" alt="Experienced Precision Machine Shop near Ventura CA">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img width="500" src="img/machine-shop.jpg" alt="Quality Precision Machine Shop in Ventura CA">
+							</div>
+						</div>
 					</div>
 				</div>
 				<br>
@@ -202,32 +215,31 @@
 				<div class="section-title text-center center">
 					<h2>Our Capabilities</h2>
 					<hr>
+					<h3>State of the Art Precision Machining</h3>
+					<br>
+					<br>
 				</div>
 
 				<div class="row text-center image-slider">
 					<div class="col-xs-4 text-center wow animated fadeIn">
 						<img src="img/fanuc.jpg" height="300">
-						<h4>Fanuc Robodrill, <br>10,000 RPM Spindle, Fanuc 31i-B5 Control.</h4>
+						<h4>Fanuc Robodrill <br>10,000 RPM Spindle, Fanuc 31i-B5 Control.</h4>
 					</div>
 					<div class="col-xs-4 text-center wow animated fadeIn">
 						<img src="img/okuma.jpg" height="300">
-						<h4>Okuma MC-V3016, <br>15,000 RPM Spindle, OSP E100M Control.</h4>
+						<h4>Okuma MC-V3016 <br>15,000 RPM Spindle, OSP E100M Control.</h4>
 					</div>
 					<div class="col-xs-4 text-center wow animated fadeIn">
 						<img src="img/optivision.jpg" height="300">
-						<h4>Optiv CMM Vision System. <br>Optional Tesa Probe kit and CAD+ installed.</h4>
+						<h4>Optiv CMM Vision System <br>Optional Tesa Probe kit and CAD+ installed.</h4>
 					</div>
 					<div class="col-xs-4 text-center wow animated fadeIn">
-						<img src="img/fanuc.jpg" height="300">
-						<h4>Fanuc Robodrill, <br>10,000 RPM Spindle, Fanuc 31i-B5 Control.</h4>
+						<img src="img/minimillcnc.jpg" height="300">
+						<h4>Haas Minimill <br>6,000 RPM.</h4>
 					</div>
 					<div class="col-xs-4 text-center wow animated fadeIn">
-						<img src="img/okuma.jpg" height="300">
-						<h4>Okuma MC-V3016, <br>15,000 RPM Spindle, OSP E100M Control.</h4>
-					</div>
-					<div class="col-xs-4 text-center wow animated fadeIn">
-						<img src="img/optivision.jpg" height="300">
-						<h4>Optiv CMM Vision System. <br>Optional Tesa Probe kit and CAD+ installed.</h4>
+						<img src="img/GenMill_2818.png" height="300">
+						<h4>Ganesh 2818VMC <br>12,000 RPM with ceramic bearings and Mitsubishi M800 Touch Screen Control.</h4>
 					</div>
 				</div>
 				<br>
@@ -378,8 +390,21 @@
 						</div>
 					</div>
 					<div class="col-sm-4">
-						<h4><a href="#">Section Title</a></h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+						<h3>Precision Machined Parts</h3>
+						<p>
+							3D TEK CNC, INC. offers services on a "per-project" basis, for R&D prototype and production jobs. 
+						</p>
+						<p>
+							With our state of the art machines and subject matter experts, we take care of all of your precision machining needs, from prototypes, precision silicone transfer/ compression molds , tooling & complete fixtures.
+						</p>
+						<ul>
+							<li><i class="fa fa-fw fa-check" aria-hidden="true"></i> Precision Milling</li>
+							<li><i class="fa fa-fw fa-check" aria-hidden="true"></i> Precision Lathing</li>
+							<li><i class="fa fa-fw fa-check" aria-hidden="true"></i> Precision EDM</li>
+							<li><i class="fa fa-fw fa-check" aria-hidden="true"></i> Ultrasonic Polishing</li>
+							<li><i class="fa fa-fw fa-check" aria-hidden="true"></i> Micro Glass Bead Blasting</li>
+							<li><i class="fa fa-fw fa-check" aria-hidden="true"></i> Precision Vision Inspection Systems</li>
+						</ul>
 					</div>
 				</div>
 
@@ -447,9 +472,7 @@
 							<h2>Certification</h2>
 							<hr>
 							<br>
-							<ul>
-								<li> <a href="">ISO 9001-2015</a> </li>
-							</ul>
+							<img class="iso" src="img/iso.png"/>
 						</div>
 					</div>
 					<div class="col-md-6">
