--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -101,7 +101,7 @@
 									<div class="row">
 										<div class="col-md-12">
 											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Premier<br>Precision Machining</h1>
-											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">premier supplier for the medical device market</h3>
+											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">Experts in <strong>precision machining</strong></h3>
 											<br>
 											<a href="#about" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
 										</div>
@@ -118,8 +118,8 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-md-12">
-											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Premier<br>Precision Manufacturer</h1>
-											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">for the <strong>medical device market</strong></h3>
+											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">High<br>Precision Machining</h1>
+											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">serving the <strong>medical device market</strong></h3>
 											<br>
 											<a href="#about" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
 										</div>
@@ -454,8 +454,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8">
-						<h3>Precision parts quoted within x days</h3>
-						<p>Request a quote</p>
+						<h3>Precision parts quoted fast</h3>
+						<p>Request a quote now</p>
 					</div>
 					<div class="col-md-4 text-right">
 						<a href="https://demo-orders.sendcnc.com/3d-tek-cnc/upload" class="btn btn-default">REQUEST A QUOTE</a>
