--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -12,7 +12,7 @@
 		<!-- Bootstrap -->
 		<link rel="stylesheet" type="text/css"	href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
-		
+		<link rel="shortcut icon" href="img/favicon.png">
 		<!-- Stylesheet
 				================================================== -->
 		<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
