saving final drafts

--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta name="robots" content="nofollow" /> 
-
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>3D TEK CNC</title>
-		<meta name="description" content="">
-		<meta name="author" content="">
+		<meta name="description" content="3D TEK CNC | High precision machining.  Precision machine shop in southern california, serving the medical device industry and more.">
+		<meta name="author" content="3D TEK CNC">
 		
 		<!-- Bootstrap -->
 		<link rel="stylesheet" type="text/css"	href="css/bootstrap.css">
@@ -100,7 +98,7 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-md-12">
-											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Premier<br>Precision Machining</h1>
+											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">High<br>Precision Machining</h1>
 											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">Experts in <strong>precision machining</strong></h3>
 											<br>
 											<a href="#about" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
@@ -118,8 +116,26 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-md-12">
-											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">High<br>Precision Machining</h1>
+											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Precision<br> Machining</h1>
 											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">serving the <strong>medical device market</strong></h3>
+											<br>
+											<a href="#about" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+			
+					</div>
+					<div class="item">
+						<!-- Header -->
+						<div id="intro-3">
+							<div class="intro-body">
+								<div class="container">
+									<div class="row">
+										<div class="col-md-12">
+											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">High<br> Precision Machining</h1>
+											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">serving Southern California</h3>
 											<br>
 											<a href="#about" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
 										</div>
@@ -143,22 +159,6 @@
 			</div>	
 		</div>
 
-		<!-- Header -->
-		<!--<div id="intro">
-			<div class="intro-body">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Header<br>Top Header Text</h1>
-							<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">Secondary Header Text</h3>
-							<br>
-							<a href="#services" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>-->
-
 		<!-- About Section -->
 		<div id="about">
 			<div class="container">
@@ -170,8 +170,8 @@
 					<div class="col-md-6">
 						<h3>Premier Precision Machining</h3>
 						<p>
-							3D TEK CNC, INC. provides <strong>premier precision machining</strong> serving a core spectrum of precision industries which
-							include Medical, Aerospace, MEMS Technology and Particle Accelerator Industries. Specializing in
+							3D TEK CNC, INC. provides <strong>premier precision machining</strong>, serving a core spectrum of precision industries which
+							includes Medical, Aerospace, MEMS Technology and Particle Accelerator Industries. Specializing in
 							precision medical components and micro mold builds for implantable silicone components.
 						</p>
 						<p>
@@ -179,7 +179,7 @@
 							deliver the highest quality components on schedule to keep your projects on time.
 						</p>
 						<p>
-							With over 30 years of machining experience, 3D TEK CNC, INC. is capable of machining all types of
+							With over 35 years of machining experience, 3D TEK CNC, INC. is capable of machining all types of
 							medical grade materials, including Titanium 6AL-4V, Niobium, Polysulfone and PEEK. Whether your
 							needs are prototype or production volumes, tooling or assembled fixtures, 3D TEK CNC, INC. has the
 							expertise to help you bring your products to market.
@@ -187,18 +187,20 @@
 					</div>
 					<div class="col-md-6">
 						<div class="about-slider">
-						<!--<img src="http://via.placeholder.com/500x350">-->
 							<div class="text-center wow animated fadeIn">
-								<img width="500" src="img/team-1.jpg" alt="Expert Precision Machinists in Ventura CA">
+								<img width="500" src="img/team-5.jpg" alt="Experienced Precision Machine Shop near Ventura CA">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img width="500" src="img/team-4.jpg" alt="Timely Precision Machine Shop near Ventura CA">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img width="500" src="img/machine-shop.jpg" alt="Quality Precision Machine Shop in Ventura CA">
 							</div>
 							<div class="text-center wow animated fadeIn">
 								<img width="500" src="img/team-2.jpg" alt="Timely Precision Machine Shop near Ventura CA">
 							</div>
 							<div class="text-center wow animated fadeIn">
-								<img width="500" src="img/team-3.jpg" alt="Experienced Precision Machine Shop near Ventura CA">
-							</div>
-							<div class="text-center wow animated fadeIn">
-								<img width="500" src="img/machine-shop.jpg" alt="Quality Precision Machine Shop in Ventura CA">
+								<img width="500" src="img/team-3.jpg" alt="Timely Precision Machine Shop near Ventura CA">
 							</div>
 						</div>
 					</div>
@@ -271,39 +273,39 @@
 								<blockquote>
 									<p><strong>Pursuit of Excellence</strong><br>
 									<em></em></p>
-									<div class="clients-name">
+									<!--<div class="clients-name">
 										<p>
 											We exceed customer expectations.
 											We deliver superior components/parts.
 											We commit to innovation and continuous improvement.
 										</p>
-									</div>
+									</div>-->
 								</blockquote>
 							</div>
 							<div class="col-sm-4">
 								<blockquote>
 									<p><strong>Teamwork and Respect</strong><br>
 									<em></em></p>
-									<div class="clients-name">
+									<!--<div class="clients-name">
 										<p>
 											We respect each other's opinions.
 											We empower employees to make decisions.
 											We recognize the power of collaboration.
 										</p>
-									</div>
+									</div>-->
 								</blockquote>
 							</div>
 							<div class="col-sm-4">
 								<blockquote>
 									<p><strong>Integrity</strong><br>
 									<em></em></p>
-									<div class="clients-name">
+									<!--<div class="clients-name">
 										<p>
 											We deliver on our commitments.
 											We are socially and environmentally responsible.
 											We do the right thing.
 										</p>
-									</div>
+									</div>-->
 								</blockquote>
 							</div>
 						</div>
@@ -323,6 +325,21 @@
 				<div class="row">
 					<div class="col-sm-8">
 						<div class="text-center gallery-slider-for">
+							<div class="text-center wow animated fadeIn">
+								<img src="img/5-axis-machining.JPG">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/machined-molds-1.JPG">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/machined-molds-2.JPG">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/quality-machining.jpg">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/machined-parts-1.JPG">
+							</div>
 							<div class="text-center wow animated fadeIn">
 								<img src="img/peek-precision-fixtures.JPG">
 							</div>
@@ -356,6 +373,21 @@
 						</div>
 						<br>
 						<div class="row text-center gallery-slider-nav hidden-xs">
+							<div class="text-center wow animated fadeIn">
+								<img src="img/5-axis-machining.JPG" height="50">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/machined-molds-1.JPG" height="50">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/machined-molds-2.JPG" height="50">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/quality-machining.jpg" height="50">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/machined-parts-1.JPG" height="50">
+							</div>
 							<div class="text-center wow animated fadeIn">
 								<img src="img/peek-precision-fixtures.JPG" height="50">
 							</div>
@@ -399,7 +431,7 @@
 						</p>
 						<ul>
 							<li><i class="fa fa-fw fa-check" aria-hidden="true"></i> Precision Milling</li>
-							<li><i class="fa fa-fw fa-check" aria-hidden="true"></i> Precision Lathing</li>
+							<li><i class="fa fa-fw fa-check" aria-hidden="true"></i> Precision Turning</li>
 							<li><i class="fa fa-fw fa-check" aria-hidden="true"></i> Precision EDM</li>
 							<li><i class="fa fa-fw fa-check" aria-hidden="true"></i> Ultrasonic Polishing</li>
 							<li><i class="fa fa-fw fa-check" aria-hidden="true"></i> Micro Glass Bead Blasting</li>
@@ -514,7 +546,7 @@
 				<div class="row">
 				</div>
 
-			<p>Copyright &copy; <a href="#" rel="nofollow">3D TEK CNC</a></p>
+			<p>Copyright &copy; <a href="#">3D TEK CNC</a></p>
 			</div>
 		</div>
 		
