--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -87,6 +87,7 @@
 				<ol class="carousel-indicators">
 					<li data-target="#intro-carousel" data-slide-to="0" class="active"></li>
 					<li data-target="#intro-carousel" data-slide-to="1"></li>
+					<li data-target="#intro-carousel" data-slide-to="2"></li>
 				</ol>
 			
 				<!-- Wrapper for slides -->
