saving final 3dtek

--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -195,13 +195,16 @@
 								<img width="500" src="img/team-4.jpg" alt="Timely Precision Machine Shop near Ventura CA">
 							</div>
 							<div class="text-center wow animated fadeIn">
-								<img width="500" src="img/machine-shop.jpg" alt="Quality Precision Machine Shop in Ventura CA">
+								<img width="500" src="img/fanuc-machining.jpg" alt="Quality Precision Machine Shop in Ventura CA">
 							</div>
 							<div class="text-center wow animated fadeIn">
 								<img width="500" src="img/team-2.jpg" alt="Timely Precision Machine Shop near Ventura CA">
 							</div>
 							<div class="text-center wow animated fadeIn">
 								<img width="500" src="img/team-3.jpg" alt="Timely Precision Machine Shop near Ventura CA">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img width="500" src="img/machine-shop.jpg" alt="Quality Precision Machine Shop in Ventura CA">
 							</div>
 						</div>
 					</div>
@@ -274,39 +277,39 @@
 								<blockquote>
 									<p><strong>Pursuit of Excellence</strong><br>
 									<em></em></p>
-									<!--<div class="clients-name">
+									<div class="clients-name">
 										<p>
 											We exceed customer expectations.
 											We deliver superior components/parts.
 											We commit to innovation and continuous improvement.
 										</p>
-									</div>-->
+									</div>
 								</blockquote>
 							</div>
 							<div class="col-sm-4">
 								<blockquote>
 									<p><strong>Teamwork and Respect</strong><br>
 									<em></em></p>
-									<!--<div class="clients-name">
+									<div class="clients-name">
 										<p>
 											We respect each other's opinions.
 											We empower employees to make decisions.
 											We recognize the power of collaboration.
 										</p>
-									</div>-->
+									</div>
 								</blockquote>
 							</div>
 							<div class="col-sm-4">
 								<blockquote>
 									<p><strong>Integrity</strong><br>
 									<em></em></p>
-									<!--<div class="clients-name">
+									<div class="clients-name">
 										<p>
 											We deliver on our commitments.
 											We are socially and environmentally responsible.
 											We do the right thing.
 										</p>
-									</div>-->
+									</div>
 								</blockquote>
 							</div>
 						</div>
@@ -342,6 +345,12 @@
 								<img src="img/machined-parts-1.JPG">
 							</div>
 							<div class="text-center wow animated fadeIn">
+								<img src="img/machined-parts-3.jpg">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/edm-2.jpg">
+							</div>
+							<div class="text-center wow animated fadeIn">
 								<img src="img/peek-precision-fixtures.JPG">
 							</div>
 							<div class="text-center wow animated fadeIn">
@@ -371,6 +380,12 @@
 							<div class="text-center wow animated fadeIn">
 								<img src="img/medical-molding.JPG">
 							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/optiv-2.jpg">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/quality-machining-2.jpg">
+							</div>
 						</div>
 						<br>
 						<div class="row text-center gallery-slider-nav hidden-xs">
@@ -388,6 +403,12 @@
 							</div>
 							<div class="text-center wow animated fadeIn">
 								<img src="img/machined-parts-1.JPG" height="50">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/machined-parts-3.jpg" height="50">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/edm-2.jpg" height="50">
 							</div>
 							<div class="text-center wow animated fadeIn">
 								<img src="img/peek-precision-fixtures.JPG" height="50">
@@ -418,6 +439,12 @@
 							</div>
 							<div class="text-center wow animated fadeIn">
 								<img src="img/medical-molding.JPG" height="50">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/optiv-2.jpg" height="50">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/quality-machining-2.jpg" height="50">
 							</div>
 
 						</div>
