--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -99,7 +99,7 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-md-12">
-											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">High<br>Precision Machining</h1>
+											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Precision<br>Micro Machining</h1>
 											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">Experts in <strong>precision machining</strong></h3>
 											<br>
 											<a href="#about" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
@@ -135,8 +135,8 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-md-12">
-											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">High<br> Precision Machining</h1>
-											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">serving Southern California</h3>
+											<h1 class="wow animated fadeInLeft" data-wow-delay="0.3s">Precision<br>Micro Machining</h1>
+											<h3 class="wow animated fadeInRight" data-wow-delay="0.8s">serving <strong>Southern California</strong></h3>
 											<br>
 											<a href="#about" class="btn btn-default page-scroll wow animated fadeInUp" data-wow-delay="1.2s"><b>Learn More</b></a> 
 										</div>
@@ -201,9 +201,6 @@
 								<img width="500" src="img/team-2.jpg" alt="Timely Precision Machine Shop near Ventura CA">
 							</div>
 							<div class="text-center wow animated fadeIn">
-								<img width="500" src="img/team-3.jpg" alt="Timely Precision Machine Shop near Ventura CA">
-							</div>
-							<div class="text-center wow animated fadeIn">
 								<img width="500" src="img/machine-shop.jpg" alt="Quality Precision Machine Shop in Ventura CA">
 							</div>
 						</div>
@@ -240,10 +237,6 @@
 						<h4>Optiv CMM Vision System <br>Optional Tesa Probe kit and CAD+ installed.</h4>
 					</div>
 					<div class="col-xs-4 text-center wow animated fadeIn">
-						<img src="img/minimillcnc.jpg" height="300">
-						<h4>Haas Minimill <br>6,000 RPM.</h4>
-					</div>
-					<div class="col-xs-4 text-center wow animated fadeIn">
 						<img src="img/GenMill_2818.png" height="300">
 						<h4>Ganesh 2818VMC <br>12,000 RPM with ceramic bearings and Mitsubishi M800 Touch Screen Control.</h4>
 					</div>
@@ -253,7 +246,6 @@
 				<br>
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<!--<a href="#" class="btn btn-default">View More</a>-->
 					</div>
 				</div>
 			</div>
@@ -529,7 +521,7 @@
 				<div class="row">
 					<div class="col-md-6">
 						<div class="wow fadeInDown animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInDown;">
-							<h2>Certification</h2>
+							<h2>ISO Compliant</h2>
 							<hr>
 							<br>
 							<img class="iso" src="img/iso.png"/>
