--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -50,7 +50,7 @@
 							<!-- Hidden li included to remove active class from about link when scrolled up past about section -->
 							<li class="hidden"> <a href="#page-top"></a> </li>
 							<li> <a href="#"><i class="fa fa-phone" aria-hidden="true"></i> (805) 588-6559</a></li>
-							<li> <a href="https://demo-orders.sendcnc.com/3d-tek-cnc/upload" class="nav-button">Request A Quote</a></li>
+							<li> <a href="#contact" class="nav-button">Request A Quote</a></li>
 						</ul>
 					</div>
 				</div>
@@ -322,6 +322,12 @@
 					<div class="col-sm-8">
 						<div class="text-center gallery-slider-for">
 							<div class="text-center wow animated fadeIn">
+								<img src="img/machined-parts-4.jpg">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/machined-parts-5.jpg">
+							</div>
+							<div class="text-center wow animated fadeIn">
 								<img src="img/5-axis-machining.JPG">
 							</div>
 							<div class="text-center wow animated fadeIn">
@@ -381,6 +387,12 @@
 						</div>
 						<br>
 						<div class="row text-center gallery-slider-nav hidden-xs">
+							<div class="text-center wow animated fadeIn">
+								<img src="img/machined-parts-4.jpg" height="50">
+							</div>
+							<div class="text-center wow animated fadeIn">
+								<img src="img/machined-parts-5.jpg" height="50">
+							</div>
 							<div class="text-center wow animated fadeIn">
 								<img src="img/5-axis-machining.JPG" height="50">
 							</div>
@@ -510,7 +522,7 @@
 						<p>Request a quote now</p>
 					</div>
 					<div class="col-md-4 text-right">
-						<a href="https://demo-orders.sendcnc.com/3d-tek-cnc/upload" class="btn btn-default">REQUEST A QUOTE</a>
+						<a href="#contact" class="btn btn-default">REQUEST A QUOTE</a>
 					</div>
 				</div>
 			</div>
@@ -519,15 +531,7 @@
 		<footer id="contact">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6">
-						<div class="wow fadeInDown animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInDown;">
-							<h2>ISO Compliant</h2>
-							<hr>
-							<br>
-							<img class="iso" src="img/iso.png"/>
-						</div>
-					</div>
-					<div class="col-md-6">
+					<div class="col-md-8">
 						<div class="wow fadeInDown animated" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInDown;">
 							<h2>Contact Us</h2>
 							<hr>
@@ -555,6 +559,14 @@
 									(805) 588-6559
 								</li>
 							</ul>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="wow fadeInDown animated" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInDown;">
+							<h2>ISO Compliant</h2>
+							<hr>
+							<br>
+							<!--<img class="iso" src="img/iso.png"/>-->
 						</div>
 					</div>
 				</div> 
