--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -120,6 +120,7 @@
 					<li data-target="#intro-carousel" data-slide-to="0" class="active"></li>
 					<li data-target="#intro-carousel" data-slide-to="1"></li>
 					<li data-target="#intro-carousel" data-slide-to="2"></li>
+					<li data-target="#intro-carousel" data-slide-to="3"></li>
 				</ol>
 			
 				<!-- Wrapper for slides -->
