--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -288,7 +288,7 @@
 						<h4>Okuma MC-V3016 <br>15,000 RPM Spindle, OSP E100M Control.</h4>
 					</div>
 					<div class="col-xs-4 text-center wow animated fadeIn">
-						<img src="img/optivision.jpg" height="300">
+						<img src="img/optiv-cmm.jpeg" height="300">
 						<h4>Optiv CMM Vision System <br>Optional Tesa Probe kit and CAD+ installed.</h4>
 					</div>
 					<div class="col-xs-4 text-center wow animated fadeIn">
