adding optiv pic

--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -292,6 +292,10 @@
 						<h4>Optiv CMM Vision System <br>Optional Tesa Probe kit and CAD+ installed.</h4>
 					</div>
 					<div class="col-xs-4 text-center wow animated fadeIn">
+						<img src="img/optiv-cmm-2.jpg" height="300">
+						<h4>Optiv CMM Vision System <br>Optional Tesa Probe kit and CAD+ installed.</h4>
+					</div>
+					<div class="col-xs-4 text-center wow animated fadeIn">
 						<img src="img/GenMill_2818.png" height="300">
 						<h4>Ganesh 2818VMC <br>12,000 RPM with ceramic bearings and Mitsubishi M800 Touch Screen Control.</h4>
 					</div>
