--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -263,6 +263,20 @@
 			</div>
 		</div>
 
+		<!-- 5 Axis Section -->
+		<div id="five-axis">
+			<div class="banner">
+				<h1>5 Axis Machining</h1>
+				<h3>Kitamura Premier Machining</h3> 
+				<video autoplay loop muted class="banner__video" poster="img/bg-video/5-axis-bg.jpg">
+					<source src="video.webm" type="video/webm">
+					<source src="img/bg-video/5-Axis.mp4" type="video/mp4">
+					<source src="img/bg-video/5-Axis.ogv" type="video/ogv">
+					<source src="img/bg-video/5-Axis.webm" type="video/webm">
+				</video>
+			</div>
+		</div>
+
 		<!-- Capabilities Section -->
 		<div id="capabilities">
 			<div class="container">
@@ -289,10 +303,6 @@
 					</div>
 					<div class="col-xs-4 text-center wow animated fadeIn">
 						<img src="img/optiv-cmm.jpeg" height="300">
-						<h4>Optiv CMM Vision System <br>Optional Tesa Probe kit and CAD+ installed.</h4>
-					</div>
-					<div class="col-xs-4 text-center wow animated fadeIn">
-						<img src="img/optiv-cmm-2.jpg" height="300">
 						<h4>Optiv CMM Vision System <br>Optional Tesa Probe kit and CAD+ installed.</h4>
 					</div>
 					<div class="col-xs-4 text-center wow animated fadeIn">
