--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -268,8 +268,7 @@
 			<div class="banner">
 				<h1>5 Axis Machining</h1>
 				<h3>Kitamura Premier Machining</h3> 
-				<video autoplay loop muted class="banner__video" poster="img/bg-video/5-axis-bg.jpg">
-					<source src="video.webm" type="video/webm">
+				<video autoplay loop muted class="banner__video" poster="img/kitamura-3.jpg">
 					<source src="img/bg-video/5-Axis.mp4" type="video/mp4">
 					<source src="img/bg-video/5-Axis.ogv" type="video/ogv">
 					<source src="img/bg-video/5-Axis.webm" type="video/webm">
