--- a/demos/3dtek/index.html
+++ b/demos/3dtek/index.html
@@ -268,7 +268,7 @@
 			<div class="banner">
 				<h1>5 Axis Machining</h1>
 				<h3>Kitamura Premier Machining</h3> 
-				<video autoplay loop muted class="banner__video" poster="img/kitamura-3.jpg">
+				<video autoplay loop muted class="banner__video" poster="img/kitamura-2.jpg">
 					<source src="img/bg-video/5-Axis.mp4" type="video/mp4">
 					<source src="img/bg-video/5-Axis.ogv" type="video/ogv">
 					<source src="img/bg-video/5-Axis.webm" type="video/webm">
@@ -289,24 +289,22 @@
 
 				<div class="row text-center image-slider">
 					<div class="col-xs-4 text-center wow animated fadeIn">
-						<img src="img/mytrunnion-4g.png" height="300">
-						<h4>Kitamura Mytrunnion-4G <br>5-Axis, Positioning Accuracy ±0.000079".</h4>
+						<img src="img/logo/kitamura_logo.jpg" height="100">
 					</div>
 					<div class="col-xs-4 text-center wow animated fadeIn">
-						<img src="img/fanuc.jpg" height="300">
-						<h4>Fanuc Robodrill <br>10,000 RPM Spindle, Fanuc 31i-B5 Control.</h4>
+						<img src="img/logo/okuma_logo.png" height="100">
 					</div>
 					<div class="col-xs-4 text-center wow animated fadeIn">
-						<img src="img/okuma.jpg" height="300">
-						<h4>Okuma MC-V3016 <br>15,000 RPM Spindle, OSP E100M Control.</h4>
+						<img src="img/logo/hexagon_logo.png" height="100">
 					</div>
 					<div class="col-xs-4 text-center wow animated fadeIn">
-						<img src="img/optiv-cmm.jpeg" height="300">
-						<h4>Optiv CMM Vision System <br>Optional Tesa Probe kit and CAD+ installed.</h4>
+						<img src="img/logo/renishaw_logo.jpg" height="100">
 					</div>
 					<div class="col-xs-4 text-center wow animated fadeIn">
-						<img src="img/GenMill_2818.png" height="300">
-						<h4>Ganesh 2818VMC <br>12,000 RPM with ceramic bearings and Mitsubishi M800 Touch Screen Control.</h4>
+						<img src="img/logo/hardinge_logo.png" height="100">	
+					</div>
+					<div class="col-xs-4 text-center wow animated fadeIn">
+						<img src="img/logo/fanuc_logo.png" height="100">
 					</div>
 				</div>
 				<br>
